test with background image on mobile-fixed font size 8

--- a/css/style.css
+++ b/css/style.css
@@ -226,11 +226,11 @@ a.fa:focus {
   }
 
   .section p {
-    font-size: 10px;
+    font-size: 8px;
   }
 
   .section li {
-    font-size: 10px;
+    font-size: 8px;
   }
 
   section.hero {
